fix: address PR review comments - extract email helper, add try/catch, use List.of